# http-server

./: .clang-format  .gitignore  CMakeLists.txt  README.md  backup.cpp  benchmark-result.txt  benchmark.sh  build.sh  build_docker.sh  build_in_cont.sh  build_local.sh  cipher-text.txt  decrypt.sh  decrypted-file.json  encrypt.sh  index-backup.html  main.cpp  notes.txt  plain-text.txt  post.lua  request-chrome.txt  request-mozilla.txt  socket_pairs.cpp  soh-decrypted.json  static_checks.sh  tasks.md  test.cpp
.github/workflows/: cmake.yml
backup/: .bash_aliases  .gitconfig  basic-react.md  doc1.txt  doxygen.sh  note1.md  note2.md  qml.md  regex_101.txt
cmake/: BoostMacros.cmake  FetchGoogleTest.cmake
docker/: 01-vendor-ubuntu  Dockerfile  create_image.sh  create_img.sh  setup_build_env.sh  sources.list
docker/ubuntu_20.04/: Dockerfile
leetcode/daily/: FindSumPairs.cpp
leetcode/dfs/: RecoverBinarySearchTree.cpp
libs/: Defines.h  FileUtils.h  JoinableThread.h  JoinableThread_2.h  LibLoader.cpp  LibLoader.h  OSUtils.h  RandomUtils.h  SSLUtils.cpp  SSLUtils.h  StrUtils.h  TimeUtils.h  TypeTraits.h  WorkerPool.h
powershell/PowerShell/: profile.ps1
powershell/WindowsPowerShell/: profile.ps1
python-101/: test.py
remove-later/: backup.cpp  simple-epoll-server.c  test-data.cpp
sample_codes/: BinarySearch.cpp  ClockAngle.cpp  RawString.cpp  RawString.h
scripts/: aes-utils.py  aes-utils.sh  base64-dec.py  dummy-script.py
scripts/milestone-proj-2/: solution.py
src/: HttpMessage.cpp  HttpMessage.h  LibDefines.h  LibLoader.cpp  LibLoader.h  LibTypes.h  SSLUtils.cpp  SSLUtils.h  Server.h  SimpleServer.cpp  SimpleServer.h  Utils.h
static/: index.html  styles.css
test/: CMakeLists.txt  FileUtils_test.cpp  JoinableThread_test.cpp  SSLUtils_test.cpp  StrUtils_test.cpp  test.cpp
